--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <meta charset="utf-8">
 <title>A Better Company</title>
 <style>
+body {
+  margin: 0;
+  padding: 0;
+  }
+
 .main {
-  min-height: calc(100vh - 100px);	
+  min-height: 100vh;	
   display: flex;
   justify-content: center;
   align-items: center;
