--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>A Better Company</title>
+<title>Better Technologies</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
@@ -11,11 +11,11 @@
 <body>
 <header>
     <div class="position-absolute top-0 end-0 p-5">
-        <a target="_blank" class="contact text-white" href="https://blog.abettercompany.net/"><h3>Blog</h3></a>
+        <a target="_blank" class="contact text-white" href="https://blog.better.in.net/"><h3>Blog</h3></a>
     </div>
     <div class="position-absolute top-50 w-100">
-        <a class="contact text-white" href="mailto:hello@abettercompany.net">
-        <h1 class="text-white text-center">A Better Company</h1>
+        <a class="contact text-white" href="mailto:hello@better.in.net">
+        <h1 class="text-white text-center">Better Technologies</h1>
         <p class="text-white text-center">Contact us to create better websites.</p>
         </a>
     </div>
